# earnings_cross_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: earnings-cross-bot.yml
config/: daytrade_rules.yaml  rules.yaml  rules_suggestion.yaml
data/: daytrade.db  daytrade_latest.json  daytrade_learning_profile.json  earnings_calendar_manual.csv  earnings_cross_bot.db  learning_profile.json  lessons.jsonl  manager_snapshot.json  margin_interest_manual.csv  mock_earnings_reactions.csv  mock_financials.csv  mock_prices.csv
docs/dashboard/: app.js  index.html  styles.css
market_intelligence/: brief.config.json
native/: Info.plist  Package.swift
scripts/: build_native_app.sh
src/: __init__.py  adaptive_learner.py  calendar_loader.py  config.py  dashboard_builder.py  db.py  earnings_reaction.py  evaluator.py  feature_engineering.py  financial_loader.py  jquants_client.py  llm_reasoner.py  main_dashboard.py  main_daytrade.py  main_evaluate.py  main_learn.py  main_morning.py  main_slack_test.py  main_supply_demand.py  main_weekly_review.py  market_intelligence.py  price_loader.py  public_data_client.py  scorer.py  slack_notifier.py  supply_demand_loader.py  trading_calendar.py  validator.py  weekly_reviewer.py
src/daytrade/: __init__.py  (+10 more)
tests/: test_adaptive_learner.py  test_dashboard_builder.py  test_daytrade.py  test_evaluator.py  test_market_intelligence.py  test_notifications.py  test_public_data_client.py  test_scorer.py  test_slack_notifier.py  test_supply_demand.py  test_trading_calendar.py  test_validator.py
(+13 files in other folders)
