[project]
name = "earnings-cross-bot"
version = "0.1.0"
description = "Japanese earnings-cross candidate scoring bot with Slack notifications."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

