[project]
name = "earnings-cross-manager"
version = "0.2.0"
description = "Unified Japanese market operations manager for earnings, briefs, and watchlists."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
